added responsive navbar

--- a/index.html
+++ b/index.html
@@ -16,14 +16,92 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
 
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/051095bf24.js" crossorigin="anonymous"></script>
+
     <style>
-        .font-manrope{
+        .font-manrope {
             font-family: 'Manrope', sans-serif;
+        }
+
+        .primary-color {
+            color: #FF4240;
+        }
+
+        li>a {
+            color: #424247;
         }
     </style>
 </head>
 
-<body>
+<body class="font-manrope">
+    <header class="md:w-4/5 md:mx-auto">
+        <nav class="navbar bg-base-100">
+            <div class="navbar-start">
+                <div class="dropdown">
+                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 6h16M4 12h8m-8 6h16" />
+                        </svg>
+                    </div>
+                    <ul tabindex="0"
+                        class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+                        <li>
+                            <a class="primary-color">Home</a>
+                        </li>
+                        <li>
+                            <a>About</a>
+                        </li>
+                        <li>
+                            <a>Pages</a>
+                        </li>
+                        <li>
+                            <a>Blog</a>
+                        </li>
+                        <li>
+                            <a>Contact</a>
+                        </li>
+                    </ul>
+                </div>
+                <a class="btn btn-ghost text-xl">Hockey<span class="primary-color">'</span>s</a>
+            </div>
+            <div class="navbar-center hidden lg:flex">
+                <ul class="menu menu-horizontal px-1 ">
+                    <li>
+                        <a class="primary-color">Home</a>
+                    </li>
+                    <li>
+                        <a>About</a>
+                    </li>
+                    <li>
+                        <a>Pages</a>
+                    </li>
+                    <li>
+                        <a>Blog</a>
+                    </li>
+                    <li>
+                        <a>Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="navbar-end gap-4">
+                <i class="fa-solid fa-magnifying-glass text-[#5e5e64] invisible md:visible"></i>
+                <a class="btn bg-[#FF4240] text-white">Get Ticket</a>
+            </div>
+        </nav>
+
+        
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 
 </body>
 
