--- a/index.html
+++ b/index.html
@@ -153,23 +153,36 @@
                 <div class="flex flex-col justify-center items-center">
                     <div class="radial-progress text-[#FF4240]" style="--value:87;" role="progressbar"><span class="text-black text-xl font-extrabold">87%</span></div>
                     <h4 class="text-xl font-semibold mt-5 mb-3">Prayer Facility</h4>
-                    <p class="para-text">Shakia rifa.</p>
+                    <p class="para-text text-center">Prayer space for focused rejuvenation.</p>
                 </div>
                 <div class="flex flex-col justify-center items-center">
                     <div class="radial-progress text-[#49D293]" style="--value:95;" role="progressbar"><span class="text-black text-xl font-extrabold">95%</span></div>
                     <h4 class="text-xl font-semibold mt-5 mb-3">Experienced Coach</h4>
-                    <p class="para-text">Shakia rifa.</p>
+                    <p class="para-text text-center">Expert coaching for precision play.</p>
                 </div>
                 <div class="flex flex-col justify-center items-center">
                     <div class="radial-progress text-[#FFB546]" style="--value:90;" role="progressbar"><span class="text-black text-xl font-extrabold">90%</span></div>
                     <h4 class="text-xl font-semibold mt-5 mb-3">Senior Player</h4>
-                    <p class="para-text">Shakia rifa.</p>
+                    <p class="para-text text-center">Senior players lead the way.</p>
                 </div>
                 <div class="flex flex-col justify-center items-center">
                     <div class="radial-progress text-[#4C8DF1]" style="--value:80;" role="progressbar"><span class="text-black text-xl font-extrabold">80%</span></div>
                     <h4 class="text-xl font-semibold mt-5 mb-3">Training Ground</h4>
-                    <p class="para-text">Shakia rifa.</p>
+                    <p class="para-text text-center">Training ground: excellence in progress.</p>
                 </div>
+            </div>
+        </section>
+
+        <section class="mt-14 md:mt-20">
+            <hr>
+            <div class="flex flex-col justify-center items-center py-4 md:py-6 ">
+                <h3 class=" text-xl md:text-3xl font-semibold">Professional Hockeys Club</h3>
+                <p class=" para-text font-medium md:w-4/5 lg:w-1/2 text-center mt-6">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
+                    placerat dolor. Purus urna in sit nullam proin. </p>
+            </div>
+            <hr>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 mt-8 md:mt-10">
+                
             </div>
         </section>
     </main>
