added responsive program section

--- a/index.html
+++ b/index.html
@@ -141,12 +141,11 @@
     </header>
 
     <main class="md:w-4/5 md:mx-auto">
-        <section class="mt-14 md:mt-20">
+        <section class="mt-14 md:mt-20 lg:mt-28">
             <hr>
             <div class="flex flex-col justify-center items-center py-4 md:py-6 ">
                 <h3 class=" text-xl md:text-3xl font-semibold">Professional Hockeys Club</h3>
-                <p class=" para-text font-medium md:w-4/5 lg:w-1/2 text-center mt-6">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
-                    placerat dolor. Purus urna in sit nullam proin. </p>
+                <p class=" para-text font-medium md:w-11/12 lg:w-2/3 text-center mt-6">Comprising skilled and seasoned athletes, coaches, and support staff, this club represents a pinnacle of excellence in the sport. </p>
             </div>
             <hr>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 mt-8 md:mt-10">
@@ -173,16 +172,44 @@
             </div>
         </section>
 
-        <section class="mt-14 md:mt-20">
+        <section class="mt-14 md:mt-20 lg:mt-28">
             <hr>
             <div class="flex flex-col justify-center items-center py-4 md:py-6 ">
-                <h3 class=" text-xl md:text-3xl font-semibold">Professional Hockeys Club</h3>
-                <p class=" para-text font-medium md:w-4/5 lg:w-1/2 text-center mt-6">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
-                    placerat dolor. Purus urna in sit nullam proin. </p>
+                <h3 class=" text-xl md:text-3xl font-semibold">Program Sections</h3>
+                <p class=" para-text font-medium  md:w-11/12 lg:w-2/3 text-center mt-6">Tailored training sessions and leagues for young, aspiring hockey players to nurture their skills and passion for the sport</p>
             </div>
             <hr>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 mt-8 md:mt-10">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-5 mt-8 md:mt-10">
+                <div class="card bg-[url('./Images/2.png')] bg-cover bg-center">
+                    <div class= " card-body pt-20 bg-black bg-opacity-50 rounded-xl">
+                      <h2 class="text-2xl font-extrabold  text-white">Junior Program</h2>
+                      <p class="text-white font-medium mt-4 mb-6"> Competitive leagues for players transitioning from youth to higher levels, focusing on skill enhancement, teamwork, and game strategy.</p>
+                      <div class="card-actions">
+                        <button class="btn bg-[#FF4240]  border-none text-base md:text-base lg:text-lg font-bold text-white">Register Now</button>
+                      </div>
+                    </div>
+                </div>
+                <div class="card bg-[url('./Images/3.png')] bg-cover bg-center">
+                    <div class= " card-body pt-20 bg-black bg-opacity-50 rounded-xl">
+                      <h2 class="text-2xl font-extrabold  text-white">Junior Program</h2>
+                      <p class="text-white font-medium mt-4 mb-6"> Competitive leagues for players transitioning from youth to higher levels, focusing on skill enhancement, teamwork, and game strategy.</p>
+                      <div class="card-actions">
+                        <button class="btn bg-[#FF4240]  border-none text-base md:text-base lg:text-lg font-bold text-white">Register Now</button>
+                      </div>
+                    </div>
+                </div>
+                <div class="card lg:col-span-2 bg-[url('./Images/4.png')] bg-cover bg-center">
+                    <div class= " card-body pt-20 bg-black bg-opacity-50 rounded-xl">
+                      <h2 class="text-2xl font-extrabold  text-white">Junior Program</h2>
+                      <p class="text-white font-medium mt-4 mb-6"> Competitive leagues for players transitioning from youth to higher levels, focusing on skill enhancement, teamwork, and game strategy.</p>
+                      <div class="card-actions">
+                        <button class="btn bg-[#FF4240]  border-none text-base md:text-base lg:text-lg font-bold text-white">Register Now</button>
+                      </div>
+                    </div>
+                </div>
+
                 
+
             </div>
         </section>
     </main>
