added responsive product section

--- a/index.html
+++ b/index.html
@@ -28,14 +28,15 @@
             color: #FF4240;
         }
 
-        .para-text{
+        .para-text {
             color: #31303099;
         }
 
         li>a {
             color: #424247;
         }
-        hr{
+
+        hr {
             border-width: 2px;
             border-style: dotted;
         }
@@ -141,75 +142,208 @@
     </header>
 
     <main class="md:w-4/5 md:mx-auto">
+        <!-- hockey's club section -->
         <section class="mt-14 md:mt-20 lg:mt-28">
             <hr>
             <div class="flex flex-col justify-center items-center py-4 md:py-6 ">
                 <h3 class=" text-xl md:text-3xl font-semibold">Professional Hockeys Club</h3>
-                <p class=" para-text font-medium md:w-11/12 lg:w-2/3 text-center mt-6">Comprising skilled and seasoned athletes, coaches, and support staff, this club represents a pinnacle of excellence in the sport. </p>
+                <p class=" para-text font-medium md:w-11/12 lg:w-2/3 text-center mt-6">Comprising skilled and seasoned
+                    athletes, coaches, and support staff, this club represents a pinnacle of excellence in the sport.
+                </p>
             </div>
             <hr>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 mt-8 md:mt-10">
                 <div class="flex flex-col justify-center items-center">
-                    <div class="radial-progress text-[#FF4240]" style="--value:87;" role="progressbar"><span class="text-black text-xl font-extrabold">87%</span></div>
+                    <div class="radial-progress text-[#FF4240]" style="--value:87;" role="progressbar"><span
+                            class="text-black text-xl font-extrabold">87%</span></div>
                     <h4 class="text-xl font-semibold mt-5 mb-3">Prayer Facility</h4>
                     <p class="para-text text-center">Prayer space for focused rejuvenation.</p>
                 </div>
                 <div class="flex flex-col justify-center items-center">
-                    <div class="radial-progress text-[#49D293]" style="--value:95;" role="progressbar"><span class="text-black text-xl font-extrabold">95%</span></div>
+                    <div class="radial-progress text-[#49D293]" style="--value:95;" role="progressbar"><span
+                            class="text-black text-xl font-extrabold">95%</span></div>
                     <h4 class="text-xl font-semibold mt-5 mb-3">Experienced Coach</h4>
                     <p class="para-text text-center">Expert coaching for precision play.</p>
                 </div>
                 <div class="flex flex-col justify-center items-center">
-                    <div class="radial-progress text-[#FFB546]" style="--value:90;" role="progressbar"><span class="text-black text-xl font-extrabold">90%</span></div>
+                    <div class="radial-progress text-[#FFB546]" style="--value:90;" role="progressbar"><span
+                            class="text-black text-xl font-extrabold">90%</span></div>
                     <h4 class="text-xl font-semibold mt-5 mb-3">Senior Player</h4>
                     <p class="para-text text-center">Senior players lead the way.</p>
                 </div>
                 <div class="flex flex-col justify-center items-center">
-                    <div class="radial-progress text-[#4C8DF1]" style="--value:80;" role="progressbar"><span class="text-black text-xl font-extrabold">80%</span></div>
+                    <div class="radial-progress text-[#4C8DF1]" style="--value:80;" role="progressbar"><span
+                            class="text-black text-xl font-extrabold">80%</span></div>
                     <h4 class="text-xl font-semibold mt-5 mb-3">Training Ground</h4>
                     <p class="para-text text-center">Training ground: excellence in progress.</p>
                 </div>
             </div>
         </section>
 
+        <!-- program section -->
         <section class="mt-14 md:mt-20 lg:mt-28">
             <hr>
             <div class="flex flex-col justify-center items-center py-4 md:py-6 ">
                 <h3 class=" text-xl md:text-3xl font-semibold">Program Sections</h3>
-                <p class=" para-text font-medium  md:w-11/12 lg:w-2/3 text-center mt-6">Tailored training sessions and leagues for young, aspiring hockey players to nurture their skills and passion for the sport</p>
+                <p class=" para-text font-medium  md:w-11/12 lg:w-2/3 text-center mt-6">Tailored training sessions and
+                    leagues for young, aspiring hockey players to nurture their skills and passion for the sport</p>
             </div>
             <hr>
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-5 mt-8 md:mt-10">
                 <div class="card bg-[url('./Images/2.png')] bg-cover bg-center">
-                    <div class= " card-body pt-20 bg-black bg-opacity-50 rounded-xl">
-                      <h2 class="text-2xl font-extrabold  text-white">Junior Program</h2>
-                      <p class="text-white font-medium mt-4 mb-6"> Competitive leagues for players transitioning from youth to higher levels, focusing on skill enhancement, teamwork, and game strategy.</p>
-                      <div class="card-actions">
-                        <button class="btn bg-[#FF4240]  border-none text-base md:text-base lg:text-lg font-bold text-white">Register Now</button>
-                      </div>
+                    <div class=" card-body pt-20 bg-black bg-opacity-50 rounded-xl">
+                        <h2 class="text-2xl font-extrabold  text-white">Junior Program</h2>
+                        <p class="text-white font-medium mt-4 mb-6">Competitive leagues for players transitioning from
+                            youth to higher levels, focusing on skill enhancement, teamwork, and game strategy.</p>
+                        <div class="card-actions">
+                            <button
+                                class="btn bg-[#FF4240]  border-none text-base md:text-base lg:text-lg font-bold text-white">Register
+                                Now</button>
+                        </div>
                     </div>
                 </div>
                 <div class="card bg-[url('./Images/3.png')] bg-cover bg-center">
-                    <div class= " card-body pt-20 bg-black bg-opacity-50 rounded-xl">
-                      <h2 class="text-2xl font-extrabold  text-white">Junior Program</h2>
-                      <p class="text-white font-medium mt-4 mb-6"> Competitive leagues for players transitioning from youth to higher levels, focusing on skill enhancement, teamwork, and game strategy.</p>
-                      <div class="card-actions">
-                        <button class="btn bg-[#FF4240]  border-none text-base md:text-base lg:text-lg font-bold text-white">Register Now</button>
-                      </div>
+                    <div class=" card-body pt-20 bg-black bg-opacity-50 rounded-xl">
+                        <h2 class="text-2xl font-extrabold  text-white">Junior Program</h2>
+                        <p class="text-white font-medium mt-4 mb-6">Opportunities for adult players of varying skill
+                            levels to engage in recreational or competitive hockey, fostering camaraderie and fitness.
+                        </p>
+                        <div class="card-actions">
+                            <button
+                                class="btn bg-[#FF4240]  border-none text-base md:text-base lg:text-lg font-bold text-white">Register
+                                Now</button>
+                        </div>
                     </div>
                 </div>
                 <div class="card lg:col-span-2 bg-[url('./Images/4.png')] bg-cover bg-center">
-                    <div class= " card-body pt-20 bg-black bg-opacity-50 rounded-xl">
-                      <h2 class="text-2xl font-extrabold  text-white">Junior Program</h2>
-                      <p class="text-white font-medium mt-4 mb-6"> Competitive leagues for players transitioning from youth to higher levels, focusing on skill enhancement, teamwork, and game strategy.</p>
-                      <div class="card-actions">
-                        <button class="btn bg-[#FF4240]  border-none text-base md:text-base lg:text-lg font-bold text-white">Register Now</button>
-                      </div>
+                    <div class=" card-body pt-20 bg-black bg-opacity-50 rounded-xl">
+                        <h2 class="text-2xl font-extrabold  text-white">Junior Program</h2>
+                        <p class="lg:w-2/3 text-white font-medium mt-4 mb-6">Explore the pinnacle of the sport,
+                            featuring comprehensive insights into top-tier national and international competitions. Stay
+                            updated with real-time standings, and the latest news from the world of professional hockey.
+                        </p>
+                        <div class="card-actions">
+                            <button
+                                class="btn bg-[#FF4240]  border-none text-base md:text-base lg:text-lg font-bold text-white">Register
+                                Now</button>
+                        </div>
                     </div>
                 </div>
+            </div>
+        </section>
 
-                
-
+        <!-- new product section -->
+        <section class="mt-14 md:mt-20 lg:mt-28">
+            <hr>
+            <div class="flex flex-col justify-center items-center py-4 md:py-6 ">
+                <h3 class=" text-xl md:text-3xl font-semibold">Our New Products</h3>
+                <p class=" para-text font-medium md:w-11/12 lg:w-2/3 text-center mt-6">Explore our latest arrivals where innovation meets style. From cutting-edge technology to trend-setting designs, our new collection is a showcase of top-tier quality and contemporary aesthetics.
+                </p>
+            </div>
+            <hr>
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-3 mt-8 md:mt-10">
+                <div class="card card-side gap-4 border bg-base-100 p-5 ">
+                    <img class="lg:w-[100px] lg:h-[200px]" src="./Images/5.png"
+                            alt="Movie" />
+                    <div class="space-y-3 ">
+                        <p class="flex gap-2 md:gap-4 para-text">
+                            <span><i class="fa-solid fa-star mr-1 text-[#F99808]"></i> 4.5</span>
+                            <span><i class="fa-regular fa-eye mr-1"></i> 20</span>
+                            <span><i class="fa-regular fa-heart mr-1"></i> 200</span>
+                        </p>
+                        <h2 class="text-base md:text-xl font-extrabold">Premium Hockey Jacket</h2>
+                        <p class="para-text text-sm md:text-base">A dynamic blend of style and functionality designed for you</p>
+                        <div class="flex flex-col md:flex-row gap-3 md:gap-2 text-sm md:text-base">
+                            <p class="text-[#FF4240] font-extrabold">Price: $22.00</p>
+                            <p class="para-text text-sm font-medium"><i class="fa-solid fa-cart-shopping"></i> Delivery Fee: Free</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card-side gap-4  border bg-base-100 p-5 ">
+                    <img class="lg:w-[100px] lg:h-[200px]" src="./Images/6.png"
+                            alt="Movie" />
+                    <div class="space-y-3 ">
+                        <p class="flex gap-2 md:gap-4 para-text">
+                            <span><i class="fa-solid fa-star mr-1 text-[#F99808]"></i> 4.2</span>
+                            <span><i class="fa-regular fa-eye mr-1"></i> 15</span>
+                            <span><i class="fa-regular fa-heart mr-1"></i> 150</span>
+                        </p>
+                        <h2 class="text-base md:text-xl font-extrabold">Hockey Ball</h2>
+                        <p class="para-text text-sm md:text-base">Meticulously engineered to meet the demands of the game</p>
+                        <div class="flex flex-col md:flex-row gap-3 md:gap-2 text-sm md:text-base">
+                            <p class="text-[#FF4240] font-extrabold">Price: $18.00</p>
+                            <p class="para-text text-sm font-medium"><i class="fa-solid fa-cart-shopping"></i> Delivery Fee: Free</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card-side gap-4  border bg-base-100 p-5 ">
+                    <img class="lg:w-[100px] lg:h-[200px]" src="./Images/7.png"
+                            alt="Movie" />
+                    <div class="space-y-3 ">
+                        <p class="flex gap-2 md:gap-4 para-text">
+                            <span><i class="fa-solid fa-star mr-1 text-[#F99808]"></i> 4.8</span>
+                            <span><i class="fa-regular fa-eye mr-1"></i>25</span>
+                            <span><i class="fa-regular fa-heart mr-1"></i> 180</span>
+                        </p>
+                        <h2 class="text-base md:text-xl font-extrabold">Cap For Hockeys</h2>
+                        <p class="para-text text-sm md:text-base">Step onto the rink in style with our Hockey Cap</p>
+                        <div class="flex flex-col md:flex-row gap-3 md:gap-2 text-sm md:text-base">
+                            <p class="text-[#FF4240] font-extrabold">Price: $12.00</p>
+                            <p class="para-text text-sm font-medium"><i class="fa-solid fa-cart-shopping"></i> Delivery Fee: Free</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card-side gap-4  border bg-base-100 p-5 ">
+                    <img class="lg:w-[100px] lg:h-[200px]" src="./Images/8.png"
+                            alt="Movie" />
+                    <div class="space-y-3 ">
+                        <p class="flex gap-2 md:gap-4 para-text">
+                            <span><i class="fa-solid fa-star mr-1 text-[#F99808]"></i> 5.0</span>
+                            <span><i class="fa-regular fa-eye mr-1"></i>25</span>
+                            <span><i class="fa-regular fa-heart mr-1"></i> 180</span>
+                        </p>
+                        <h2 class="text-base md:text-xl font-extrabold">Jerseys</h2>
+                        <p class="para-text text-sm md:text-base">Elevate your team's presence on the ice with our meticulously crafted Hockey Jerseys</p>
+                        <div class="flex flex-col md:flex-row gap-3 md:gap-2 text-sm md:text-base">
+                            <p class="text-[#FF4240] font-extrabold">Price: $10.00</p>
+                            <p class="para-text text-sm font-medium"><i class="fa-solid fa-cart-shopping"></i> Delivery Fee: Free</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card-side gap-4  border bg-base-100 p-5 ">
+                    <img class="lg:w-[100px] lg:h-[200px]" src="./Images/9.png"
+                            alt="Movie" />
+                    <div class="space-y-3 ">
+                        <p class="flex gap-2 md:gap-4 para-text">
+                            <span><i class="fa-solid fa-star mr-1 text-[#F99808]"></i> 4.0</span>
+                            <span><i class="fa-regular fa-eye mr-1"></i>28</span>
+                            <span><i class="fa-regular fa-heart mr-1"></i> 100</span>
+                        </p>
+                        <h2 class="text-base md:text-xl font-extrabold">Helmet For Hockeys</h2>
+                        <p class="para-text text-sm md:text-base">Safety meets performance with our  Hockey Helmet</p>
+                        <div class="flex flex-col md:flex-row gap-3 md:gap-2 text-sm md:text-base">
+                            <p class="text-[#FF4240] font-extrabold">Price: $23.00</p>
+                            <p class="para-text text-sm font-medium"><i class="fa-solid fa-cart-shopping"></i> Delivery Fee: Free</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card-side gap-4  border bg-base-100 p-5 ">
+                    <img class="lg:w-[100px] lg:h-[200px]" src="./Images/10.png"
+                            alt="Movie" />
+                    <div class="space-y-3 ">
+                        <p class="flex gap-2 md:gap-4 para-text">
+                            <span><i class="fa-solid fa-star mr-1 text-[#F99808]"></i> 3.0</span>
+                            <span><i class="fa-regular fa-eye mr-1"></i>28</span>
+                            <span><i class="fa-regular fa-heart mr-1"></i> 100</span>
+                        </p>
+                        <h2 class="text-base md:text-xl font-extrabold">Helmet For Hockeys</h2>
+                        <p class="para-text text-sm md:text-base">specially crafted football features eye-catching designs </p>
+                        <div class="flex flex-col md:flex-row gap-3 md:gap-2 text-sm md:text-base">
+                            <p class="text-[#FF4240] font-extrabold">Price: $15.00</p>
+                            <p class="para-text text-sm font-medium"><i class="fa-solid fa-cart-shopping"></i> Delivery Fee: Free</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
