--- a/index.html
+++ b/index.html
@@ -453,13 +453,13 @@
                         </div>
                         <!-- email -->
                         <div class="card bg-[#fddb5f19] p-6">
-                            <img class="w-[50px]" src="./Images/phone.png" alt="">
+                            <img class="w-[50px]" src="./Images/email.png" alt="">
                             <p class="text-para mt-3 mb-1">Email:</p>
                             <p class="text-lg font-extrabold">hockeys@support.com</p>
                         </div>
                         <!-- location -->
                         <div class="card bg-[#629cf332] p-6">
-                            <img class="w-[50px]" src="./Images/phone.png" alt="">
+                            <img class="w-[50px]" src="./Images/location.png" alt="">
                             <p class="text-para mt-3 mb-1">Location :</p>
                             <p class="text-lg font-extrabold">152/1 Mohakhali Wireless Gate</p>
                         </div>
